err/python-isign.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/isign'...
Compiling './lib/python3.5/site-packages/isign/client.py'...
***   File "./lib/python3.5/site-packages/isign/client.py", line 40
    path = f"/mobile/login/status/{token}.json"
                                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/isign/connection.py'...
***   File "./lib/python3.5/site-packages/isign/connection.py", line 28
    return (f"ISignConnection("
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/isign/environment.py'...
***   File "./lib/python3.5/site-packages/isign/environment.py", line 15
    return f"ISignEnvironment(name={self.name!r}, netloc={self.netloc!r}, scheme={self.scheme!r})"
                                                                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/isign/error.py'...
***   File "./lib/python3.5/site-packages/isign/error.py", line 15
    return f"ISignError: {self.method} {self.path} -> {self.status_code}: {self.error}"
                                                                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/isign/functions.py'...
***   File "./lib/python3.5/site-packages/isign/functions.py", line 15
    ISIGN_ENVIRONMENT: Union[str, ISignEnvironment] = "sandbox"
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/isign/model'...
Compiling './lib/python3.5/site-packages/isign/model/base.py'...
***   File "./lib/python3.5/site-packages/isign/model/base.py", line 6
    self.raw: Dict[str, Any] = {}
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/isign/model/error.py'...
***   File "./lib/python3.5/site-packages/isign/model/error.py", line 24
    result = f"{self.message} ({self.error_code})"
                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/isign/model/field_error.py'...
***   File "./lib/python3.5/site-packages/isign/model/field_error.py", line 18
    return f"{self.field} - {self.message} ({self.error_code})"
                                                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/python_isign-0.3.0.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
